--- a/public/output.css
+++ b/public/output.css
@@ -640,6 +640,22 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -660,12 +676,20 @@ video {
   height: 0.75rem;
 }
 
+.h-\[10\%\] {
+  height: 10%;
+}
+
 .h-\[15\%\] {
   height: 15%;
 }
 
 .h-\[20\%\] {
   height: 20%;
+}
+
+.h-\[55\%\] {
+  height: 55%;
 }
 
 .h-\[65\%\] {
@@ -730,6 +754,10 @@ video {
   grid-auto-flow: column;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -752,6 +780,10 @@ video {
 
 .justify-items-center {
   justify-items: center;
+}
+
+.gap-14 {
+  gap: 3.5rem;
 }
 
 .gap-2 {
@@ -801,25 +833,16 @@ video {
   border-bottom-color: rgb(31 41 55 / var(--tw-border-opacity, 1));
 }
 
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
-}
-
 .bg-white\/10 {
   background-color: rgb(255 255 255 / 0.1);
 }
 
-.bg-white\/20 {
-  background-color: rgb(255 255 255 / 0.2);
-}
-
-.bg-white\/30 {
-  background-color: rgb(255 255 255 / 0.3);
-}
-
 .bg-white\/15 {
   background-color: rgb(255 255 255 / 0.15);
+}
+
+.bg-white\/20 {
+  background-color: rgb(255 255 255 / 0.2);
 }
 
 .bg-\[url\(\'\/images\/bg-desktop\.png\'\)\] {
@@ -828,6 +851,10 @@ video {
 
 .bg-\[url\(\'\/images\/bg-desktop2\.png\'\)\] {
   background-image: url('/images/bg-desktop2.png');
+}
+
+.bg-\[url\(\'\/images\/bg-desktop3\.png\'\)\] {
+  background-image: url('/images/bg-desktop3.png');
 }
 
 .bg-gradient-to-r {
@@ -846,12 +873,12 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.to-green-400 {
-  --tw-gradient-to: #4ade80 var(--tw-gradient-to-position);
-}
-
 .to-blue-700 {
   --tw-gradient-to: #1d4ed8 var(--tw-gradient-to-position);
+}
+
+.to-green-400 {
+  --tw-gradient-to: #4ade80 var(--tw-gradient-to-position);
 }
 
 .bg-cover {
@@ -870,6 +897,10 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-4 {
@@ -899,8 +930,20 @@ video {
   line-height: 2.25rem;
 }
 
+.text-\[clamp\(0\.9rem\2c 1\.2vw\2c 1\.2rem\)\] {
+  font-size: clamp(0.9rem,1.2vw,1.2rem);
+}
+
 .text-\[clamp\(1\.5rem\2c 2\.5vw\2c 2rem\)\] {
   font-size: clamp(1.5rem,2.5vw,2rem);
+}
+
+.text-\[clamp\(1rem\2c 1\.2vw\2c 1\.5rem\)\] {
+  font-size: clamp(1rem,1.2vw,1.5rem);
+}
+
+.text-\[clamp\(1rem\2c 1\.2vw\2c 1\.8rem\)\] {
+  font-size: clamp(1rem,1.2vw,1.8rem);
 }
 
 .text-\[clamp\(1rem\2c 1vw\2c 1\.8rem\)\] {
@@ -912,13 +955,8 @@ video {
   line-height: 1.5rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-\[clamp\(0\.9rem\2c 1\.2vw\2c 1\.2rem\)\] {
-  font-size: clamp(0.9rem,1.2vw,1.2rem);
+.text-\[clamp\(\.5rem\2c 1\.2vw\2c 1\.8rem\)\] {
+  font-size: clamp(.5rem,1.2vw,1.8rem);
 }
 
 .font-bold {
@@ -994,60 +1032,8 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.group:hover .group-hover\:text-\[clamp\(1\.5rem\2c 2vw\2c 1\.5rem\)\] {
-  font-size: clamp(1.5rem,2vw,1.5rem);
-}
-
-.group:hover .group-hover\:text-\[clamp\(1rem\2c 2vw\2c 1\.5rem\)\] {
-  font-size: clamp(1rem,2vw,1.5rem);
-}
-
-.group:hover .group-hover\:text-\[clamp\(1rem\2c 1\.5vw\2c 1\.5rem\)\] {
-  font-size: clamp(1rem,1.5vw,1.5rem);
-}
-
-.group:hover .group-hover\:text-\[clamp\(1rem\2c 1vw\2c 1\.5rem\)\] {
-  font-size: clamp(1rem,1vw,1.5rem);
-}
-
-.group:hover .group-hover\:text-\[clamp\(1rem\2c 1\.3vw\2c 1\.5rem\)\] {
-  font-size: clamp(1rem,1.3vw,1.5rem);
-}
-
 .group:hover .group-hover\:text-\[clamp\(1rem\2c 1\.6vw\2c 1\.5rem\)\] {
   font-size: clamp(1rem,1.6vw,1.5rem);
-}
-
-.group:hover .group-hover\:text-\[clamp\(1rem\2c 1\.3vw\2c 1\.3rem\)\] {
-  font-size: clamp(1rem,1.3vw,1.3rem);
-}
-
-.group:hover .group-hover\:text-\[clamp\(1rem\2c 1\.2vw\2c 1\.5rem\)\] {
-  font-size: clamp(1rem,1.2vw,1.5rem);
-}
-
-.group:hover .group-hover\:text-\[clamp\(0\.8rem\2c 1vw\2c 1\.5rem\)\] {
-  font-size: clamp(0.8rem,1vw,1.5rem);
-}
-
-.group:hover .group-hover\:text-\[clamp\(0\.9rem\2c 1vw\2c 1\.5rem\)\] {
-  font-size: clamp(0.9rem,1vw,1.5rem);
-}
-
-.group:hover .group-hover\:text-\[clamp\(0\.9rem\2c 1\.2vw\2c 1\.5rem\)\] {
-  font-size: clamp(0.9rem,1.2vw,1.5rem);
-}
-
-.group:hover .group-hover\:text-\[clamp\(0\.9rem\2c 1\.3vw\2c 1\.2rem\)\] {
-  font-size: clamp(0.9rem,1.3vw,1.2rem);
-}
-
-.group:hover .group-hover\:text-\[clamp\(0\.9rem\2c 1\.3vw\2c 1\.1rem\)\] {
-  font-size: clamp(0.9rem,1.3vw,1.1rem);
-}
-
-.group:hover .group-hover\:text-\[clamp\(0\.9rem\2c 1\.2vw\2c 1\.2rem\)\] {
-  font-size: clamp(0.9rem,1.2vw,1.2rem);
 }
 
 .group:hover .group-hover\:opacity-100 {
@@ -1073,6 +1059,22 @@ video {
 
   .sm\:mt-4 {
     margin-top: 1rem;
+  }
+
+  .sm\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .sm\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .sm\:-mt-2 {
+    margin-top: -0.5rem;
+  }
+
+  .sm\:aspect-square {
+    aspect-ratio: 1 / 1;
   }
 
   .sm\:h-\[22\%\] {
@@ -1101,6 +1103,14 @@ video {
 
   .sm\:grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:p-10 {
+    padding: 2.5rem;
   }
 
   .sm\:text-base {
