--- a/public/output.css
+++ b/public/output.css
@@ -612,12 +612,20 @@ video {
   top: 50%;
 }
 
+.-ml-4 {
+  margin-left: -1rem;
+}
+
 .-mt-0 {
   margin-top: -0px;
 }
 
 .-mt-2 {
   margin-top: -0.5rem;
+}
+
+.-mt-4 {
+  margin-top: -1rem;
 }
 
 .-mt-8 {
@@ -630,6 +638,10 @@ video {
 
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .mt-1 {
@@ -652,24 +664,8 @@ video {
   margin-top: 1.5rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
-.-mt-4 {
-  margin-top: -1rem;
-}
-
-.-ml-4 {
-  margin-left: -1rem;
-}
-
-.block {
-  display: block;
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .flex {
@@ -688,8 +684,8 @@ video {
   aspect-ratio: 1 / 1;
 }
 
-.h-20 {
-  height: 5rem;
+.h-28 {
+  height: 7rem;
 }
 
 .h-3 {
@@ -706,6 +702,10 @@ video {
 
 .h-\[20\%\] {
   height: 20%;
+}
+
+.h-\[50\%\] {
+  height: 50%;
 }
 
 .h-\[55\%\] {
@@ -732,32 +732,12 @@ video {
   height: 100%;
 }
 
-.h-\[1px\] {
-  height: 1px;
+.h-\[30\%\] {
+  height: 30%;
 }
 
-.h-\[50\%\] {
-  height: 50%;
-}
-
-.h-40 {
-  height: 10rem;
-}
-
-.h-36 {
-  height: 9rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-32 {
-  height: 8rem;
-}
-
-.h-28 {
-  height: 7rem;
+.h-\[60\%\] {
+  height: 60%;
 }
 
 .min-h-screen {
@@ -780,21 +760,13 @@ video {
   width: 90vw;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
 }
 
-.w-\[40\%\] {
-  width: 40%;
-}
-
-.w-\[20\%\] {
-  width: 20%;
+.w-full {
+  width: 100%;
 }
 
 .-translate-x-1\/2 {
@@ -924,21 +896,6 @@ video {
   background-color: rgb(255 255 255 / 0.2);
 }
 
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
-}
-
-.bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
 .bg-\[url\(\'\/images\/bg-desktop\.png\'\)\] {
   background-image: url('/images/bg-desktop.png');
 }
@@ -1006,29 +963,19 @@ video {
   padding-right: 1rem;
 }
 
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
 }
 
 .text-center {
@@ -1100,15 +1047,15 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .backdrop-blur {
   --tw-backdrop-blur: blur(8px);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .transition-all {
@@ -1129,12 +1076,6 @@ video {
   transition-duration: 150ms;
 }
 
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .duration-200 {
   transition-duration: 200ms;
 }
@@ -1143,11 +1084,6 @@ video {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:bg-blue-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-blue-300:hover {
@@ -1211,24 +1147,12 @@ video {
     margin-top: 1rem;
   }
 
-  .sm\:mr-10 {
-    margin-right: 2.5rem;
-  }
-
-  .sm\:mr-16 {
-    margin-right: 4rem;
-  }
-
-  .sm\:mr-24 {
-    margin-right: 6rem;
-  }
-
-  .sm\:mb-4 {
-    margin-bottom: 1rem;
-  }
-
   .sm\:aspect-square {
     aspect-ratio: 1 / 1;
+  }
+
+  .sm\:h-20 {
+    height: 5rem;
   }
 
   .sm\:h-\[22\%\] {
@@ -1251,20 +1175,12 @@ video {
     height: 100%;
   }
 
-  .sm\:h-20 {
-    height: 5rem;
+  .sm\:w-\[30\%\] {
+    width: 30%;
   }
 
   .sm\:w-\[40vw\] {
     width: 40vw;
-  }
-
-  .sm\:w-\[20\%\] {
-    width: 20%;
-  }
-
-  .sm\:w-\[30\%\] {
-    width: 30%;
   }
 
   .sm\:grid-cols-1 {
